# setup-environment-TheRabbitt

./: CMakeLists.txt  Doxyfile
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
